# playground-ipc

./: .clang-format  .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/common/: Client.hpp  KeyboardEventHandler.hpp  Packet.hpp  Pipe.hpp  Server.hpp  SignalEventHandler.hpp  Utils.hpp  crc8.hpp
src/consumer/: CMakeLists.txt  main.cpp
src/producer/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt
src/tests/src/: checksum.cpp  packet.cpp  pipe.cpp  utils.cpp
